--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,7 +58,7 @@
         <div class="col-md-12">
             {% for flash_message in app.session.flashBag.get('success') %}
                 <div class="alert alert-success" role="alert">
-                    <strong>Superbe !</strong> {{ flash_message }}
+                    <strong>Super !</strong> {{ flash_message }}
                 </div>
             {% endfor %}
 
