--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -3,7 +3,7 @@
 {% block header_img %}<img class="slide-image" src="{{ asset('img/todolist_content.jpg') }}" alt="todo list">{% endblock %}
 
 {% block body %}
-    <a href="{{ path('task_create') }}" class="btn btn-info pull-right">Créer une tâche</a>
+    <a href="{{ path('tasks_create') }}" class="btn btn-info pull-right">Créer une tâche</a>
     <hr>
     <div class="row">
         {% for task in tasks %}
